security-groups.tf
resource "aws_security_group" "rds" {
  name   = "Development_rds"
  vpc_id = vpc.id   ##denote the vpc id

  ingress {
    from_port   = 5432
    to_port     = 5432
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 5432
    to_port     = 5432
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "Development_rds"
  }
}
